syntax = "proto3";

package pusher_service_package;

service PusherService {
  rpc SendMessage(PusherMessage) returns (EmptyResponse);
  rpc SendMessageStream(stream PusherMessage) returns (stream Response);
}

message PusherMessage {
  string message = 1;
}

message EmptyResponse {}

message Response {
  string status = 1;
}